# pulse-api

./: .eslintrc.json  .prettierignore  .prettierrc  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: implementation_plan.MD
src/: App.tsx  monaco-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: grpc.rs  rest.rs
src-tauri/src/commands/: collection.rs  environment.rs  mod.rs  request.rs  websocket.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/engine/: executor.rs  mod.rs  script_runner.rs  variable_resolver.rs
src-tauri/src/models/: collection.rs  environment.rs  mod.rs  request.rs  response.rs
src/components/collections/: CollectionTree.tsx
src/components/layout/: EnvSelector.tsx  ImportModal.tsx  Sidebar.css  Sidebar.tsx  TabBar.css  TabBar.tsx  TopNavBar.css  TopNavBar.tsx
src/components/request/: AuthEditor.tsx  GraphQLEditor.tsx  GrpcEditor.tsx  KeyValueEditor.tsx  RequestConfig.tsx  RequestEditor.css  RequestEditor.tsx  SaveRequestModal.tsx  WebSocketEditor.tsx
src/components/ui/: Dropdown.css  Dropdown.tsx  EnvInput.css  EnvInput.tsx
src/services/: collectionService.ts  environmentService.ts  requestService.ts
src/stores/: collectionStore.ts  environmentStore.ts  requestStore.ts  tabStore.ts  uiStore.ts
src/styles/: theme.css
src/types/: collection.ts  environment.ts  request.ts
src/utils/: postmanImporter.ts  useResizer.ts
